k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: rental-postgres
  namespace: default
spec:
  ports:
    - port: 5432
  selector:
    app: rental-postgres
  clusterIP: None # Headless service for stateful deployment
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rental-postgres
  namespace: default
spec:
  serviceName: "rental-postgres"
  replicas: 1
  selector:
    matchLabels:
      app: rental-postgres
  template:
    metadata:
      labels:
        app: rental-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
